--- a/AdventOfCode.cabal
+++ b/AdventOfCode.cabal
@@ -24,3 +24,9 @@ executable 2
   main-is:             2.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
+
+executable 3
+  hs-source-dirs:      src
+  main-is:             3.hs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5
