--- a/AdventOfCode.cabal
+++ b/AdventOfCode.cabal
@@ -30,3 +30,4 @@ executable 3
   main-is:             3.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
+                     , split
