--- a/AdventOfCode.cabal
+++ b/AdventOfCode.cabal
@@ -31,3 +31,9 @@ executable 3
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                      , split
+
+executable 4
+  hs-source-dirs:      src
+  main-is:             4.hs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5
