--- a/AdventOfCode.cabal
+++ b/AdventOfCode.cabal
@@ -37,3 +37,10 @@ executable 4
   main-is:             4.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
+
+executable 5
+  hs-source-dirs:      src
+  main-is:             5.hs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5
+                      , containers
