--- a/AdventOfCode.cabal
+++ b/AdventOfCode.cabal
@@ -29,8 +29,7 @@ executable 3
   hs-source-dirs:      src
   main-is:             3.hs
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5
-                     , split
+  build-depends:       base >= 4.7 && < 5, split
 
 executable 4
   hs-source-dirs:      src
@@ -42,5 +41,10 @@ executable 5
   hs-source-dirs:      src
   main-is:             5.hs
   default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5, containers
+
+executable 6
+  hs-source-dirs:      src
+  main-is:             6.hs
+  default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
-                      , containers
